--- a/zephyr/boards/riscv32/swervolf_nexys/swervolf_nexys.dts
+++ b/zephyr/boards/riscv32/swervolf_nexys/swervolf_nexys.dts
@@ -13,6 +13,12 @@
 	chosen {
 		zephyr,console = &uart0;
 		zephyr,shell-uart = &uart0;
+		zephyr,sram = &sram;
+	};
+
+	sram: memory@0 {
+		compatible = "mmio-sram";
+		reg = <0x00000000 0x00800000>;
 	};
 };
 
