--- a/zephyr/boards/riscv/swervolf_nexys/swervolf_nexys_defconfig
+++ b/zephyr/boards/riscv/swervolf_nexys/swervolf_nexys_defconfig
@@ -1,4 +1,4 @@
-CONFIG_RISCV32=y
+CONFIG_RISCV=y
 CONFIG_SOC_SERIES_RISCV32_SWERV=y
 CONFIG_SOC_RISCV32_SWERVOLF=y
 CONFIG_BOARD_SWERVOLF_NEXYS=y
@@ -10,3 +10,5 @@ CONFIG_UART_CONSOLE_ON_DEV_NAME="uart0"
 CONFIG_PLIC=n
 CONFIG_XIP=n
 CONFIG_BOOT_BANNER=y
+CONFIG_SYS_CLOCK_TICKS_PER_SEC=100
+
