--- a/zephyr/soc/riscv/riscv-privilege/Kconfig
+++ b/zephyr/soc/riscv/riscv-privilege/Kconfig
@@ -22,4 +22,4 @@ config RISCV_HAS_PLIC
 	  Does the SOC provide support for a Platform Level Interrupt Controller
 
 
-source "$(SOC_DIR)/riscv32/riscv-privilege/*/Kconfig.soc"
+source "$(SOC_DIR)/riscv/riscv-privilege/*/Kconfig.soc"
